# MIDI-Translator

./: .gitignore  package-lock.json  package.json  reestruturação.md  requirements.txt
app/: __init__.py  runtime.py  service.py
app/bridge/: __init__.py  preset_packs_builtin.py  server.py
backend/: bridge.py  runtime_telemetry.py  service.py
backends/: __init__.py  loader.py  noop.py
backends/linux/: __init__.py  clipboard.py  keyboard.py  shell.py  system.py  volume.py  window.py
backends/windows/: __init__.py  clipboard.py  keyboard.py  mouse.py  shell.py  system.py  volume.py  window.py
config/: hardware_channels.json
connectors/: __init__.py  base.py  manifest.py  registry.py
connectors/audio/: __init__.py  actions.py  connector.py  media_actions.py  session_actions.py  volume_actions.py
connectors/core/: __init__.py  actions.py  clipboard_actions.py  connector.py  keyboard_actions.py  mouse_actions.py  noop_actions.py
connectors/discord/: __init__.py  connector.py
connectors/home_assistant/: __init__.py  connector.py
connectors/http/: __init__.py  connector.py
connectors/midi_out/: __init__.py  connector.py
connectors/obs/: __init__.py  client.py  connector.py
core/: bus.py
devices/: starrykey25.json
docs/: 09-TAURI-ROADMAP.md  Base.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
profiles/: default.json  swap_test.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: listener_service.rs  main.rs  startup.rs  tray.rs
tools/: midi_probe.py
(+196 files in other folders)
