[package]
name = "miditranslate"
version = "0.1.0"
description = "MIDITranslate desktop app"
authors = ["MIDITranslate"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
